# ocean_data_gateway

./: .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
docs/: alternative_variable.ipynb  api.rst  conf.py  demo.ipynb  details.ipynb  environment.yml  index.rst  utils.ipynb
notebooks/: demo.ipynb
ocean_data_gateway/: __init__.py  gateway.py  utils.py  vars.py
ocean_data_gateway/readers/: __init__.py  axds.py  data_reader.py  erddap.py  local.py  reader.py
ocean_data_gateway/tests/: test_axds.py  test_erddap.py
ocean_data_gateway/variables/: axds_platform2_variable_list.csv  erddap_variable_list_coastwatch.pfeg.noaa.gov.csv  erddap_variable_list_erddap.sensors.ioos.us.csv  parameter_group_names.txt
tests/: conftest.py  make_test_files.py  test_axds.py  test_erddap.py  test_gateway.py  test_local.py  test_utils.py  test_vars.py
